--- a/style.css
+++ b/style.css
@@ -13,6 +13,14 @@ body{
 background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
+background: #7F00FF;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #E100FF, #7F00FF);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #E100FF, #7F00FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+background: #159957;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #155799, #159957);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #155799, #159957); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 
 
         color: rgb(255, 255, 255);
@@ -25,7 +33,6 @@ svg{
         margin: 15px; 
 }
 svg:hover{
-        border-radius: 60px;
         border-width: 15px;
         color: white;
 }
@@ -190,7 +197,7 @@ a:hover{
 footer{
         width: 100%; 
         height: 10%; 
-        background-color: #f1f1f1;
+        background-color: #201568;
         border-top: #9a9999;
         border-bottom: #9a9999;
 }
