--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ background: linear-gradient(to right, #155799, #159957); /* W3C, IE 10+/ Edge, F
         color: rgb(255, 255, 255);
 
 }
+
 svg{
         /* border-color: rgb(0, 16, 10); */
         border-color: rgb(5, 118, 156);
@@ -35,6 +36,9 @@ svg{
 svg:hover{
         border-width: 15px;
         color: white;
+        background-color: rgb(0, 0, 0);
+        border-radius: 40px; 
+        padding: 20px; 
 }
 #header{
         width: 100%; 
@@ -136,6 +140,9 @@ nav ul li a:hover::after{
         width: 100%;
         height: 3px
 }
+li{
+        font-size: 12px;
+}
 .thinline{
         background-color: rgb(255, 255, 255);
         width:100%;
@@ -158,6 +165,14 @@ nav ul li a:hover::after{
         width: 100%;
         height: 100px; 
         margin-right: 30px; 
+}
+.column{
+        display: flex;
+        flex-direction: column;
+        margin-top: 20px; 
+}
+audio{
+        margin-top: 10px;
 }
 ol{
         margin-left: 25px;
@@ -197,8 +212,10 @@ a:hover{
 footer{
         width: 100%; 
         height: 10%; 
-        background-color: #201568;
+        background-color: #ffffff;
         border-top: #9a9999;
+        border-width: 3px; 
+        border-style: solid;
         border-bottom: #9a9999;
 }
 .lifeRecommendations{
@@ -213,7 +230,7 @@ footer{
         border-color: black;
         border-width: 2px;
         border-style: line;
-        width: 50%; 
+        width: 55%; 
         text-align: left;
         transition: all .3s ease-in-out; 
 }
@@ -228,7 +245,7 @@ footer{
         border-color: black;
         border-width: 2px;
         border-style: line;
-        width: 50%; 
+        width: 55%; 
         text-align: left;      
          
 }
