--- a/style.css
+++ b/style.css
@@ -21,23 +21,49 @@ background: #159957;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #155799, #159957);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #155799, #159957); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
+background-color: rgb(8, 95, 11);
+background-image: linear-gradient(314deg, #63a91f 0%, #1d6e3c 74%);
+background-size: 20%;
 
+    background-position: top left, top 33vh left, top 66vh left;
+    background-repeat: no-repeat;
+    background-size: 100vw 80vh, 100vw 33vh, 100vw 34vh;
 
         color: rgb(255, 255, 255);
 
 }
+.sillyanimation{
+        font-size: 20px;
+        width: 60%; 
+        margin-left: 20px;
+         line-height: 1.5;
+          padding: 20px;
+           border-color: white;
+            border-style: solid;
+             border-radius: 8px;
+             transition: all .3s ease-in-out; 
+}
+.sillyanimation:hover{
+        font-size: 20px;
+        width: 60%; 
+        margin-left: 20px;
+         line-height: 1.5;
+          padding: 20px;
+           border-color: white;
+            border-style: solid;
+             border-radius: 8px;
+             background-color: rgb(104, 55, 12);
+}
 
 svg{
-        /* border-color: rgb(0, 16, 10); */
-        border-color: rgb(5, 118, 156);
         color: white;
-        margin: 15px; 
+        margin: 10px 50px 0px 50px
 }
 svg:hover{
         border-width: 15px;
         color: white;
-        background-color: rgb(0, 0, 0);
-        border-radius: 40px; 
+        background-color: rgb(104, 55, 12);
+        border-radius: 50px; 
         padding: 20px; 
 }
 #header{
@@ -51,12 +77,7 @@ svg:hover{
         align-items: center;
 
 }
-/* h2:hover{
-        color: rgb(130, 190, 40);
-}
-h3:hover{
-        color: rgb(18, 123, 64);
-} */
+
 nav{
         display: flex; 
         align-items: center;
@@ -194,17 +215,53 @@ ol{
         height: 140px;
         text-align: left;
         transition: all .3s ease-in-out; 
+        margin: 10px; 
 }
 .recommendations:hover{
-        background-color: black;
+        background-color: rgb(104, 55, 12);
         color: white;
+        border-color: rgb(255, 255, 255);
+        border-width: 2px;
+        border-style: solid; 
+        padding: 2px; 
+
 }
 .row{
         display: flex;
-        justify-content: space-evenly;
-        align-self: center;
-        margin-top: 30px; 
-        margin-bottom: 30px;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        
+}
+.picture{
+        transition: all .3s ease-in-out; 
+        width: 30%; height: 30%;border-radius: 10px;filter: grayscale(100%);
+        margin-top: 10px;
+                                        /* border-style: solid;
+                                        border-color: white;
+                                        border-width: 3px;  */
+                                        filter: drop-shadow(0 0.2rem 0.25rem rgba(0, 0, 0, 0.2));
+                                }
+
+.picture:hover{
+        filter: grayscale(50%);
+        margin-top: 10px;
+        border-style: solid;
+        border-color: white;
+        scale: 105%;
+        border-width: 3px; 
+}
+.rows{
+        display: flex;
+        justify-content: center;
+        width: 100%;
+
+}
+.rows1{
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+
 }
 a:hover{
         color: rgb(255, 255, 0); 
@@ -231,6 +288,7 @@ footer{
         border-width: 2px;
         border-style: line;
         width: 55%; 
+
         text-align: left;
         transition: all .3s ease-in-out; 
 }
@@ -239,7 +297,7 @@ footer{
         font-family: 'Ubuntu Mono', monospace;
         border-width: 3px;
         border-radius: 8px; 
-        background-color: rgb(0, 0, 0);
+        background-color: rgb(104, 55, 12);
         padding: 5px; 
         color: rgb(255, 255, 255); 
         border-color: black;
@@ -251,7 +309,6 @@ footer{
 }
 .center{
         display: flex;
-        justify-content: space-evenly;
         text-align: center;
 }
 
@@ -272,7 +329,10 @@ span{
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-style: italic;
 }
-
+.typing-container{
+        display: flex;
+        justify-content: center;
+}
 .typing-carousel {
         display: inline-block;
         border: 1px solid black;
