--- a/style.css
+++ b/style.css
@@ -2,69 +2,57 @@
         margin: 0; 
         padding: 0; 
         letter-spacing: 1.3px;
-        line-height: 21px;
+        line-height: 1.4;
         box-sizing: border-box; 
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-family: 'Kanit-Bold';
 }
 
 
 body{
-        background: #0f0c29;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-background: #7F00FF;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #E100FF, #7F00FF);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #E100FF, #7F00FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-background: #159957;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #155799, #159957);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #155799, #159957); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-background-color: rgb(8, 95, 11);
-background-image: linear-gradient(314deg, #63a91f 0%, #1d6e3c 74%);
-background-size: 20%;
-
-    background-position: top left, top 33vh left, top 66vh left;
-    background-repeat: no-repeat;
-    background-size: 100vw 80vh, 100vw 33vh, 100vw 34vh;
-
+        background: #0c1a13b9;
         color: rgb(255, 255, 255);
 
 }
-.sillyanimation{
-        font-size: 20px;
-        width: 60%; 
-        margin-left: 20px;
-         line-height: 1.5;
-          padding: 20px;
-           border-color: white;
-            border-style: solid;
-             border-radius: 8px;
-             transition: all .3s ease-in-out; 
+.border{
+        border-radius: 20px; 
+        box-shadow: 0 10px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+        padding: 20px; 
+
+background: linear-gradient(to right, #0a3810, #206e47); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background: -webkit-linear-gradient(to right,#0a3810, #206e47); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}.border1{
+        border-radius: 20px; 
+        box-shadow: 0 10px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+        padding: 20px; 
+
+
 }
-.sillyanimation:hover{
-        font-size: 20px;
-        width: 60%; 
+.sillyanimation{
+        font-size: 18px;
+        width:95%; 
         margin-left: 20px;
+        border-color: white; 
+        border-width: 1px; 
+        border-style: solid;
          line-height: 1.5;
           padding: 20px;
-           border-color: white;
-            border-style: solid;
-             border-radius: 8px;
-             background-color: rgb(104, 55, 12);
+             transition: all .3s ease-in-out; 
+             box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+             border-radius: 50px;
 }
 
+.column{
+        display: flex;
+        flex-direction: column;
+        width: fit-content;
+}
 svg{
         color: white;
-        margin: 10px 50px 0px 50px
+        margin-left: 20px; 
 }
 svg:hover{
-        border-width: 15px;
-        color: white;
-        background-color: rgb(104, 55, 12);
-        border-radius: 50px; 
-        padding: 20px; 
 }
 #header{
         width: 100%; 
@@ -204,21 +192,21 @@ ol{
         font-family: 'Ubuntu Mono', monospace;
         border-width: 3px;
         border-radius: 5px; 
-        background-color: #000703;
-        background-color: white;
+        background-color: #295331;
         padding: 5px; 
-        border-color: rgb(11, 57, 29);
-        color: black; 
+        border-color: rgb(255, 255, 255);
+        color: rgb(255, 255, 255); 
         border-width: 2px;
-        border-style: line;
+        border-style: solid;
         width: 230px; 
         height: 140px;
         text-align: left;
         transition: all .3s ease-in-out; 
         margin: 10px; 
+        box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 .recommendations:hover{
-        background-color: rgb(104, 55, 12);
+        
         color: white;
         border-color: rgb(255, 255, 255);
         border-width: 2px;
@@ -243,14 +231,7 @@ ol{
                                         filter: drop-shadow(0 0.2rem 0.25rem rgba(0, 0, 0, 0.2));
                                 }
 
-.picture:hover{
-        filter: grayscale(50%);
-        margin-top: 10px;
-        border-style: solid;
-        border-color: white;
-        scale: 105%;
-        border-width: 3px; 
-}
+
 .rows{
         display: flex;
         justify-content: center;
@@ -259,8 +240,9 @@ ol{
 }
 .rows1{
         display: flex;
-        justify-content: space-between;
         width: 100%;
+        margin-left: 150px;
+        margin-top: 10px; 
 
 }
 a:hover{
@@ -277,19 +259,18 @@ footer{
 }
 .lifeRecommendations{
         
-        font-size: 15px;
+        font-size: 30px;
         font-family: 'Ubuntu Mono', monospace;
         border-width: 3px;
         border-radius: 8px; 
-        background-color: rgb(255, 255, 255);
+        background-color: #295331;
         padding: 5px; 
-        color: rgb(0, 0, 0); 
-        border-color: black;
+        color: rgb(255, 255, 255); 
+        border-color: rgb(255, 255, 255);
         border-width: 2px;
-        border-style: line;
-        width: 55%; 
-
+        border-style: solid;
         text-align: left;
+        width: 70%;
         transition: all .3s ease-in-out; 
 }
 .lifeRecommendations:hover{
@@ -297,13 +278,12 @@ footer{
         font-family: 'Ubuntu Mono', monospace;
         border-width: 3px;
         border-radius: 8px; 
-        background-color: rgb(104, 55, 12);
+        background-color: #0d821a;
         padding: 5px; 
         color: rgb(255, 255, 255); 
-        border-color: black;
+        border-color: rgb(255, 255, 255);
         border-width: 2px;
-        border-style: line;
-        width: 55%; 
+        border-style: solid;
         text-align: left;      
          
 }
