--- a/style.css
+++ b/style.css
@@ -150,8 +150,8 @@ nav ul li a:hover::after{
         width: 100%;
         height: 3px
 }
-li{
-        font-size: 12px;
+.li{
+        font-size: 18px;
 }
 .thinline{
         background-color: rgb(255, 255, 255);
@@ -281,7 +281,7 @@ footer{
         border-width: 2px;
         border-style: solid;
         text-align: left;
-        width: 30%;
+        width: 50%;
         transition: all .3s ease-in-out; 
 }
 .lifeRecommendations:hover{
